[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"
write_to = "src/MMCQsc/version.py"
write_to_template = '''
__version__ = "{version}"
version = "{version}"
'''